--- a/code/final-report.ipynb
+++ b/code/final-report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Exploring and Classifying Genres in Music\n",
     "\n",
-    "Aditya Kanthale, Amanuel Odicho, Vivek Patel <br/>\n",
+    "#### Authors (alphabetically): Aditya Kanthale, Amanuel Odicho, Vivek Patel<br/>\n",
     "\n",
     "The code for our project can be found here: [spotify-data-science](https://github.com/stoic-devv/spotify-data-science)\n",
     "Dataset can be downloaded from here directly: [data](https://github.com/stoic-devv/spotify-data-science/blob/main/data/final-data.csv)\n",
@@ -582,47 +582,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       [cantautor, latin alternative, nueva cancion, ...\n",
-       "1       [cantautor, latin alternative, nueva cancion, ...\n",
-       "2       [cantautor, latin alternative, nueva cancion, ...\n",
-       "3       [cantautor, latin alternative, nueva cancion, ...\n",
-       "4       [cantautor, latin alternative, nueva cancion, ...\n",
-       "                              ...                        \n",
-       "7247    [classic j-rock, j-rock, japanese dream pop, s...\n",
-       "7248    [classic j-rock, j-rock, japanese dream pop, s...\n",
-       "7249    [classic j-rock, j-rock, japanese dream pop, s...\n",
-       "7250    [classic j-rock, j-rock, japanese dream pop, s...\n",
-       "7251                                                   []\n",
-       "Name: sp_genres, Length: 7252, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['sp_genres']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## EDA 1"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -643,6 +607,7 @@
     }
    ],
    "source": [
+    "# plotting pair plots to analyze the relation of audio features with popularity\n",
     "audio_features.append('popularity')\n",
     "sn_pp = sns.pairplot(df[audio_features],hue='popularity')\n",
     "sn_pp.savefig(\"../img/pairplot.png\")"
@@ -654,7 +619,20 @@
    "source": [
     "Conclusions:\n",
     "\n",
-    "1. We need to remove"
+    "Most liked songs are:\n",
+    "1. Are louder\n",
+    "2. Have higher tempo\n",
+    "3. Uniformly distributed over keys\n",
+    "4. Are not live\n",
+    "5. Are nor instrumental"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN for approximating genres\n",
+    "This also shows the correlation of the audio features with "
    ]
   },
   {
