some models and updated 2nd

--- a/code/final-report.ipynb
+++ b/code/final-report.ipynb
@@ -13,15 +13,16 @@
    "source": [
     "#### Authors (alphabetically): Aditya Kanthale, Amanuel Odicho, Vivek Patel<br/>\n",
     "\n",
-    "The code for our project can be found here: [spotify-data-science](https://github.com/stoic-devv/spotify-data-science)\n",
-    "Dataset can be downloaded from here directly: [data](https://github.com/stoic-devv/spotify-data-science/blob/main/data/final-data.csv)\n",
+    "In addition to our final report, we have highlighted some of our work in this notebook. The notebook is in chronological order following our report, and under each section we have provided descriptions that explain our code and intentions. The code might be a little dense, thus we supplemented with some in-line comments to make it more readable. <br/>\n",
     "\n",
-    "Insert intro from the report"
+    "A more elaborate description in our report can be found here:  [final-report.pdf](https://github.com/stoic-devv/spotify-data-science/blob/data-cleaning/docs/final-project.pdf) <br/>\n",
+    "The code for our project can be found here: [spotify-data-science](https://github.com/stoic-devv/spotify-data-science)<br/>\n",
+    "Dataset can be downloaded from here directly: [data](https://github.com/stoic-devv/spotify-data-science/blob/main/data/final-data.csv)<br/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,11 +1120,490 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    7252.000000\n",
+       "mean       56.457750\n",
+       "std         9.763336\n",
+       "min        37.600000\n",
+       "25%        49.300000\n",
+       "50%        56.800000\n",
+       "75%        63.200000\n",
+       "max        85.700000\n",
+       "Name: rymspot rate, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vivek\n",
+    "df = pd.read_csv('../data/final-data.csv', sep='~')\n",
+    "x = range(3,len(df.columns)-1)\n",
+    "df = df.iloc[:,x]\n",
+    "df['rym rating'] = df['rym rating']*20\n",
+    "# p and (1-p ) hyperparameter tuning\n",
+    "df['rymspot rate'] = (df['rym rating']*.5 + df['popularity']*.5)\n",
+    "df['rymspot rate'].describe()\n",
+    "#Take average of popularity and rym rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vivek"
+    "labels = []\n",
+    "for d in df['rymspot rate']:\n",
+    "    labels+=[0 if d >= 75 else 1 if d >= 50 else 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-14.074</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0991</td>\n",
+       "      <td>0.90700</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.1110</td>\n",
+       "      <td>0.377</td>\n",
+       "      <td>91.240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-14.650</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0704</td>\n",
+       "      <td>0.89500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1110</td>\n",
+       "      <td>0.459</td>\n",
+       "      <td>141.231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-12.273</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0841</td>\n",
+       "      <td>0.87600</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.1040</td>\n",
+       "      <td>0.480</td>\n",
+       "      <td>152.197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-12.577</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0620</td>\n",
+       "      <td>0.79400</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1470</td>\n",
+       "      <td>0.483</td>\n",
+       "      <td>145.376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-11.647</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2490</td>\n",
+       "      <td>0.84400</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.1120</td>\n",
+       "      <td>0.175</td>\n",
+       "      <td>64.841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7247</th>\n",
+       "      <td>-9.650</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0443</td>\n",
+       "      <td>0.00724</td>\n",
+       "      <td>0.004210</td>\n",
+       "      <td>0.1910</td>\n",
+       "      <td>0.775</td>\n",
+       "      <td>147.919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7248</th>\n",
+       "      <td>-10.027</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0803</td>\n",
+       "      <td>0.62800</td>\n",
+       "      <td>0.464000</td>\n",
+       "      <td>0.0622</td>\n",
+       "      <td>0.343</td>\n",
+       "      <td>99.975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7249</th>\n",
+       "      <td>-12.967</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0284</td>\n",
+       "      <td>0.86500</td>\n",
+       "      <td>0.684000</td>\n",
+       "      <td>0.0876</td>\n",
+       "      <td>0.556</td>\n",
+       "      <td>86.995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7250</th>\n",
+       "      <td>-10.179</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0294</td>\n",
+       "      <td>0.57500</td>\n",
+       "      <td>0.878000</td>\n",
+       "      <td>0.0720</td>\n",
+       "      <td>0.394</td>\n",
+       "      <td>144.118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7251</th>\n",
+       "      <td>-7.678</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0395</td>\n",
+       "      <td>0.19700</td>\n",
+       "      <td>0.855000</td>\n",
+       "      <td>0.0824</td>\n",
+       "      <td>0.829</td>\n",
+       "      <td>113.983</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7252 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
+       "0      -14.074     0       0.0991       0.90700          0.000004    0.1110   \n",
+       "1      -14.650     1       0.0704       0.89500          0.000000    0.1110   \n",
+       "2      -12.273     1       0.0841       0.87600          0.000001    0.1040   \n",
+       "3      -12.577     1       0.0620       0.79400          0.000000    0.1470   \n",
+       "4      -11.647     0       0.2490       0.84400          0.000005    0.1120   \n",
+       "...        ...   ...          ...           ...               ...       ...   \n",
+       "7247    -9.650     1       0.0443       0.00724          0.004210    0.1910   \n",
+       "7248   -10.027     1       0.0803       0.62800          0.464000    0.0622   \n",
+       "7249   -12.967     1       0.0284       0.86500          0.684000    0.0876   \n",
+       "7250   -10.179     1       0.0294       0.57500          0.878000    0.0720   \n",
+       "7251    -7.678     0       0.0395       0.19700          0.855000    0.0824   \n",
+       "\n",
+       "      valence    tempo  \n",
+       "0       0.377   91.240  \n",
+       "1       0.459  141.231  \n",
+       "2       0.480  152.197  \n",
+       "3       0.483  145.376  \n",
+       "4       0.175   64.841  \n",
+       "...       ...      ...  \n",
+       "7247    0.775  147.919  \n",
+       "7248    0.343   99.975  \n",
+       "7249    0.556   86.995  \n",
+       "7250    0.394  144.118  \n",
+       "7251    0.829  113.983  \n",
+       "\n",
+       "[7252 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = range(3,len(df.columns)-17)\n",
+    "X = df.iloc[:,x]\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        43\n",
+      "           1       0.76      0.96      0.85      1046\n",
+      "           2       0.65      0.25      0.36       362\n",
+      "\n",
+      "    accuracy                           0.75      1451\n",
+      "   macro avg       0.47      0.40      0.40      1451\n",
+      "weighted avg       0.71      0.75      0.70      1451\n",
+      "\n",
+      "[[  0  42   1]\n",
+      " [  0 999  47]\n",
+      " [  0 271  91]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SVM classifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import warnings\n",
+    "warnings.filterwarnings('always')\n",
+    "X_train, X_test, y_train,y_test =train_test_split(\n",
+    "                                        X, labels, test_size = 0.2)\n",
+    "gnb = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
+    "naive = gnb.fit(X_train,y_train)\n",
+    "y_pred = naive.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        43\n",
+      "           1       0.78      0.87      0.82      1046\n",
+      "           2       0.51      0.41      0.46       362\n",
+      "\n",
+      "    accuracy                           0.73      1451\n",
+      "   macro avg       0.43      0.43      0.43      1451\n",
+      "weighted avg       0.69      0.73      0.71      1451\n",
+      "\n",
+      "[[  0  42   1]\n",
+      " [  0 906 140]\n",
+      " [  0 213 149]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Gaussian Naive Bayes\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "gnb = GaussianNB()\n",
+    "naive = gnb.fit(X_train,y_train)\n",
+    "y_pred = naive.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        43\n",
+      "           1       0.78      0.92      0.84      1046\n",
+      "           2       0.60      0.37      0.46       362\n",
+      "\n",
+      "    accuracy                           0.75      1451\n",
+      "   macro avg       0.46      0.43      0.43      1451\n",
+      "weighted avg       0.71      0.75      0.72      1451\n",
+      "\n",
+      "[[  0  42   1]\n",
+      " [  1 958  87]\n",
+      " [  0 228 134]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Decision Tree depth 7\n",
+    "from sklearn import tree\n",
+    "# scores = []\n",
+    "# for i in range(1,20):\n",
+    "#     # X_train, X_test, y_train,y_test =train_test_split(\n",
+    "#     #                                          X, labels, test_size = 0.2)\n",
+    "#     for x in range(1,100):\n",
+    "#         gnb = tree.DecisionTreeClassifier(random_state = 0, max_depth=i)\n",
+    "#         naive = gnb.fit(X_train,y_train)\n",
+    "#         y_pred = naive.predict(X_test)\n",
+    "\n",
+    "#         scores += [accuracy_score(y_test, y_pred)]\n",
+    "\n",
+    "#     print(sum(scores)/len(scores))\n",
+    "gnb = tree.DecisionTreeClassifier(random_state = 0, max_depth=7)\n",
+    "naive = gnb.fit(X_train,y_train)\n",
+    "y_pred = naive.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        43\n",
+      "           1       0.75      0.95      0.84      1046\n",
+      "           2       0.59      0.20      0.30       362\n",
+      "\n",
+      "    accuracy                           0.74      1451\n",
+      "   macro avg       0.45      0.38      0.38      1451\n",
+      "weighted avg       0.69      0.74      0.68      1451\n",
+      "\n",
+      "[[  0  43   0]\n",
+      " [  0 995  51]\n",
+      " [  0 289  73]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#KNN\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "gnb = KNeighborsClassifier(n_neighbors=22)\n",
+    "naive = gnb.fit(X_train,y_train)\n",
+    "y_pred = naive.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        43\n",
+      "           1       0.72      1.00      0.84      1046\n",
+      "           2       0.00      0.00      0.00       362\n",
+      "\n",
+      "    accuracy                           0.72      1451\n",
+      "   macro avg       0.24      0.33      0.28      1451\n",
+      "weighted avg       0.52      0.72      0.60      1451\n",
+      "\n",
+      "[[   0   43    0]\n",
+      " [   0 1046    0]\n",
+      " [   0  362    0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "gnb = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)\n",
+    "naive = gnb.fit(X_train,y_train)\n",
+    "y_pred = naive.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.67      0.05      0.09        43\n",
+      "           1       0.79      0.92      0.85      1046\n",
+      "           2       0.62      0.39      0.48       362\n",
+      "\n",
+      "    accuracy                           0.76      1451\n",
+      "   macro avg       0.69      0.45      0.47      1451\n",
+      "weighted avg       0.74      0.76      0.73      1451\n",
+      "\n",
+      "[[  2  40   1]\n",
+      " [  1 959  86]\n",
+      " [  0 220 142]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#XGBoost classifier\n",
+    "import xgboost as xgb\n",
+    "boost = xgb.XGBClassifier()\n",
+    "bo = boost.fit(X_train,y_train)\n",
+    "y_pred = bo.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
@@ -1132,6 +1612,13 @@
    "source": [
     "## Conclusions and Future work"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1170,7 +1657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
