--- a/code/final-report.ipynb
+++ b/code/final-report.ipynb
@@ -1610,6 +1610,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Recommender System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Shrink df to needed features only\n",
+    "df = pd.read_csv('../data/final-data.csv', sep='~')\n",
+    "x = range(3,len(df.columns)-1)\n",
+    "df = df.iloc[:,x]\n",
+    "x = list(range(3,len(df.columns)-16))\n",
+    "x+=[14,-1]\n",
+    "X = df.iloc[:,x]\n",
+    "# X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Edit string features into \"bag of words\"\n",
+    "import string\n",
+    "for r in range(len(X['sp_genres'])):\n",
+    "    X.iloc[r,-1] = X.iloc[r,[-1]]['sp_genres'].translate(str.maketrans('', '', string.punctuation))\n",
+    "# X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7252\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Cosine similarity on all features\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cv = CountVectorizer()\n",
+    "count_matrix = cv.fit_transform(df[\"sp_genres\"])\n",
+    "# print(\"Count Matrix:\", count_matrix.toarray())\n",
+    "# np.shape(count_matrix)\n",
+    "# cosine_sim = cosine_similarity(count_matrix)\n",
+    "arr2 = []\n",
+    "np.asarray(arr2)\n",
+    "arr = count_matrix.toarray()\n",
+    "arr.astype(float)\n",
+    "print(len(arr))\n",
+    "for i in range(len(arr)):\n",
+    "    temp = []\n",
+    "    for x in range(len(X.columns)-2):\n",
+    "        temp += [X.iloc[i,x]]\n",
+    "    arr2 += [arr[i].tolist() + temp]\n",
+    "# len(arr2)\n",
+    "cosine_sim = cosine_similarity(arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Smells Like Teen Spirit - 2015 Remaster\n",
+      "2 Wuthering Heights\n",
+      "3 L'Amour Looks Something Like You\n",
+      "4 The Wedding List\n",
+      "5 I Know\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example recommendation\n",
+    "namelike = 'Silent All These Years - 2015 Remaster'\n",
+    "def get_index_from_name(name):\n",
+    "    return df.index[df['name'] == name].tolist()\n",
+    "\n",
+    "idx = get_index_from_name(namelike)\n",
+    "\n",
+    "similar_songs = list(enumerate(cosine_sim[idx]))\n",
+    "songs = np.argsort(similar_songs[0][1])\n",
+    "topfive = songs[-2:-7:-1]\n",
+    "for i in range(len(topfive)):\n",
+    "    print(i+1,df.iloc[topfive[i]]['name'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusions and Future work"
    ]
   },
